--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -14,6 +14,7 @@
   .profile__subtitle {
     margin: 8px 0 0;
     text-align: left;
+    max-width: 215px;
   }
 }
 
@@ -21,5 +22,6 @@
   .profile__subtitle {
     font-size: 18px;
     line-height: 22px;
+    max-width: 294px;
   }
 }
