--- a/blocks/profile/__title-wrapper/profile__title-wrapper.css
+++ b/blocks/profile/__title-wrapper/profile__title-wrapper.css
@@ -9,6 +9,6 @@
 @media screen and (min-width: 768px) {
   .profile__title-wrapper {
     gap: 18px;
-    max-width: 336px;
+    max-width: 100%;
   }
 }
